--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,6 @@
         "ergebnis/composer-normalize": "^2.28.3",
         "ergebnis/data-provider": "^1.2.0",
         "ergebnis/license": "^2.1.0",
-        "ergebnis/php-cs-fixer-config": "^4.11.0",
         "ergebnis/phpstan-rules": "^1.0.0",
         "fakerphp/faker": "^1.20.0",
         "infection/infection": "~0.26.16",
@@ -30,8 +29,8 @@
         "phpstan/phpstan-phpunit": "^1.2.2",
         "phpstan/phpstan-strict-rules": "^1.4.4",
         "phpunit/phpunit": "^9.5.26",
-        "psalm/plugin-phpunit": "~0.18.3",
-        "vimeo/psalm": "^4.30.0"
+        "theofidry/php-cs-fixer-config": "^1.0",
+        "webmozarts/strict-phpunit": "^7.5"
     },
     "autoload": {
         "psr-4": {
@@ -40,7 +39,7 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "Fidry\\CpuCounter\\Test\\": "test/"
+            "Fidry\\CpuCounter\\Test\\": "tests/"
         }
     },
     "config": {
