--- a/.github/workflows/integrate.yaml
+++ b/.github/workflows/integrate.yaml
@@ -26,10 +26,10 @@ jobs:
                     tools: "phive"
 
             -   name: "Install ComposerNormalize"
-                run: "phive install composer-normalize --trust-gpg-keys=C00543248C87FB13"
+                run: "phive install composer-normalize --trust-gpg-keys C00543248C87FB13"
 
             -   name: "Install PHP-CS-Fixer"
-                run: "phive install php-cs-fixer --trust-gpg-keys=E82B2FB314E9906E"
+                run: "phive install php-cs-fixer --trust-gpg-keys E82B2FB314E9906E"
 
             -   name: "Run the CS linter"
                 run: "make cs_lint"
@@ -51,9 +51,6 @@ jobs:
                     coverage: "none"
                     php-version: "${{ matrix.php-version }}"
                     tools: "phive"
-
-            -   name: "Install PHPStan"
-                run: "phive install phpstan --trust-gpg-keys"
 
             -   name: "Run Auto-Review tests"
                 run: "make autoreview"
@@ -99,7 +96,7 @@ jobs:
                     tools: "infection"
 
             -   name: "Install Infection"
-                run: "phive install infection --trust-gpg-keys=C5095986493B4AA0"
+                run: "phive install infection --trust-gpg-keys C5095986493B4AA0"
 
             -   name: "Run PHPUnit with coverage"
                 run: "make phpunit_coverage_infection"
