--- a/.github/workflows/integrate.yaml
+++ b/.github/workflows/integrate.yaml
@@ -35,7 +35,7 @@ jobs:
                 run: "echo '#!/usr/bin/env sh' > .phive/install-phive"
 
             -   name: "Correct the PHIVE link"
-                run: "ln -sf $(which phive) ./tools/phive && touch -c ./tools/phive"
+                run: "ln -sf $(which phive) ./tools/phive"
 
             -   name: "Run the CS linter"
                 run: "make cs_lint"
@@ -108,7 +108,7 @@ jobs:
                 run: "echo '#!/usr/bin/env sh' > .phive/install-phive"
 
             -   name: "Correct the PHIVE link"
-                run: "ln -sf $(which phive) ./tools/phive && touch -c ./tools/phive"
+                run: "ln -sf $(which phive) ./tools/phive"
 
             -   name: "Run PHPUnit with coverage"
                 run: "make phpunit_coverage_infection"
