--- a/phpstan.src.neon
+++ b/phpstan.src.neon
@@ -1,12 +1,10 @@
 parameters:
 	checkMissingIterableValueType: false
-
 	inferPrivatePropertyTypeFromConstructor: true
 
 	level: max
 
 	paths:
-		- src/
-		- tests/
+		- src
 
-	tmpDir: .build/phpstan/
+	tmpDir: .build/phpstan/src/
