--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "webmozart/assert": "^1.11"
     },
     "require-dev": {
+        "fidry/makefile": "^0.2.0",
         "phpstan/extension-installer": "^1.2.0",
         "phpstan/phpstan": "^1.9.2",
         "phpstan/phpstan-deprecation-rules": "^1.0.0",
