--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
         "phpstan/phpstan-deprecation-rules": "^1.0.0",
         "phpstan/phpstan-phpunit": "^1.2.2",
         "phpstan/phpstan-strict-rules": "^1.4.4",
-        "phpunit/phpunit": "^9.5.26",
+        "phpunit/phpunit": "^9.5.26 || ^8.5.31",
         "theofidry/php-cs-fixer-config": "^1.0",
         "webmozarts/strict-phpunit": "^7.5"
     },
