--- a/composer.json
+++ b/composer.json
@@ -33,6 +33,7 @@
         }
     },
     "autoload-dev": {
+        "files": ["stubs"],
         "psr-4": {
             "Fidry\\CpuCoreCounter\\Test\\": "tests/"
         }
