--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,7 @@
         }
     },
     "autoload-dev": {
-        "files": ["stubs"],
+        "classmap": ["stubs"],
         "psr-4": {
             "Fidry\\CpuCoreCounter\\Test\\": "tests/"
         }
