Add  abase for e2e tests

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -23,6 +23,7 @@
     <coverage>
         <include>
             <directory>src</directory>
+            <file>tests/Finder/LabeledFinder.php</file>
         </include>
     </coverage>
 </phpunit>
