--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,7 @@
 /.github/                       export-ignore
 /.phive/                        export-ignore
-/test/                          export-ignore
+/bin/                           export-ignore
+/tests/                         export-ignore
 /.editorconfig                  export-ignore
 /.gitattributes                 export-ignore
 /.gitignore                     export-ignore
@@ -10,7 +11,5 @@
 /composer.lock                  export-ignore
 /infection.json                 export-ignore
 /Makefile                       export-ignore
-/phpstan-baseline.neon          export-ignore
-/phpstan.neon                   export-ignore
-/psalm-baseline.xml             export-ignore
-/psalm.xml                      export-ignore
+/phpstan.*.neon                 export-ignore
+/phpunit*.xml export-ignore     export-ignore
