--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,9 @@
 /.github/                       export-ignore
 /.phive/                        export-ignore
-/test/                          export-ignore
+/bin/                           export-ignore
+/e2e/                           export-ignore
+/stubs/                         export-ignore
+/tests/                         export-ignore
 /.editorconfig                  export-ignore
 /.gitattributes                 export-ignore
 /.gitignore                     export-ignore
@@ -10,7 +13,7 @@
 /composer.lock                  export-ignore
 /infection.json                 export-ignore
 /Makefile                       export-ignore
-/phpstan-baseline.neon          export-ignore
-/phpstan.neon                   export-ignore
-/psalm-baseline.xml             export-ignore
-/psalm.xml                      export-ignore
+/phpstan.src.neon               export-ignore
+/phpstan.tests.neon             export-ignore
+/phpunit_legacy.xml.dist        export-ignore
+/phpunit.xml.dist               export-ignore
