--- a/.gitattributes
+++ b/.gitattributes
@@ -8,7 +8,7 @@
 /.yamllint.yaml                 export-ignore
 /composer-require-checker.json  export-ignore
 /composer.lock                  export-ignore
-/infection.json                 export-ignore
+/infection.json5                export-ignore
 /Makefile                       export-ignore
 /phpstan-baseline.neon          export-ignore
 /phpstan.neon                   export-ignore
