--- a/.github/workflows/integrate.yaml
+++ b/.github/workflows/integrate.yaml
@@ -157,3 +157,84 @@ jobs:
 
             -   name: "Run Infection"
                 run: "make infection"
+
+    e2e-ubuntu:
+        name: "End-to-End tests Ubuntu"
+        runs-on: "ubuntu-latest"
+        strategy:
+            matrix:
+                php-version:
+                    - "8.1"
+        steps:
+            -   name: "Checkout"
+                uses: "actions/checkout@v3.1.0"
+
+            -   name: "Set up PHP"
+                uses: "shivammathur/setup-php@2.22.0"
+                with:
+                    coverage: "xdebug"
+                    php-version: "${{ matrix.php-version }}"
+                    tools: "phive"
+
+            -   name: "Install Composer dependencies"
+                uses: "ramsey/composer-install@v2"
+
+            -   name: "Setup the expected output"
+                run: "mv e2e/expected-output-ubuntu e2e/expected-output"
+
+            -   name: "Run E2E tests"
+                run: "make e2e"
+
+    e2e-osx:
+        name: "End-to-End tests OSX"
+        runs-on: "macos-latest"
+        strategy:
+            matrix:
+                php-version:
+                    - "8.1"
+        steps:
+            -   name: "Checkout"
+                uses: "actions/checkout@v3.1.0"
+
+            -   name: "Set up PHP"
+                uses: "shivammathur/setup-php@2.22.0"
+                with:
+                    coverage: "xdebug"
+                    php-version: "${{ matrix.php-version }}"
+                    tools: "phive"
+
+            -   name: "Install Composer dependencies"
+                uses: "ramsey/composer-install@v2"
+
+            -   name: "Setup the expected output"
+                run: "mv e2e/expected-output-osx e2e/expected-output"
+
+            -   name: "Run E2E tests"
+                run: "make e2e"
+
+    e2e-windows:
+        name: "End-to-End tests Windows"
+        runs-on: "windows-latest"
+        strategy:
+            matrix:
+                php-version:
+                    - "8.1"
+        steps:
+            -   name: "Checkout"
+                uses: "actions/checkout@v3.1.0"
+
+            -   name: "Set up PHP"
+                uses: "shivammathur/setup-php@2.22.0"
+                with:
+                    coverage: "xdebug"
+                    php-version: "${{ matrix.php-version }}"
+                    tools: "phive"
+
+            -   name: "Install Composer dependencies"
+                uses: "ramsey/composer-install@v2"
+
+            -   name: "Setup the expected output"
+                run: "mv e2e/expected-output-windows e2e/expected-output"
+
+            -   name: "Run E2E tests"
+                run: "make e2e"
