--- a/.github/workflows/integrate.yaml
+++ b/.github/workflows/integrate.yaml
@@ -237,4 +237,4 @@ jobs:
                 run: "mv e2e/expected-output-windows e2e/expected-output"
 
             -   name: "Run E2E tests"
-                run: "make e2e"
+                run: "./e2e/test-finders.sh"
