--- a/infection.json5
+++ b/infection.json5
@@ -23,21 +23,21 @@
         "CastString": {
             "ignore": [
                 // I can't find a case in practice where this would happen
-                "Fidry\\CpuCoreCounter\\Exec\\ProcOpen::execute"
+                "Fidry\\CpuCoreCounter\\Executor\\ProcOpen::execute"
             ]
         },
         "FalseValue": {
             "ignore": [
                 // This is from thecodingmachine/safe – leave it alone
-                "Fidry\\CpuCoreCounter\\Exec\\ShellExec::execute"
+                "Fidry\\CpuCoreCounter\\Executor\\ShellExec::execute"
             ]
         },
         "FunctionCallRemoval": {
             "ignore": [
                 // I can't find a case in practice where this would happen
-                "Fidry\\CpuCoreCounter\\Exec\\ProcOpen::execute",
+                "Fidry\\CpuCoreCounter\\Executor\\ProcOpen::execute",
                 // This is from thecodingmachine/safe – leave it alone
-                "Fidry\\CpuCoreCounter\\Exec\\ShellExec::execute"
+                "Fidry\\CpuCoreCounter\\Executor\\ShellExec::execute"
             ]
         },
         "PublicVisibility": false
