--- a/.github/workflows/integrate.yaml
+++ b/.github/workflows/integrate.yaml
@@ -268,3 +268,29 @@ jobs:
 
             -   name: "Run E2E tests"
                 run: "./e2e/test-restricted-finders.sh"
+
+    # This is a "trick", a meta task which does not change, and we can use in
+    # the protected branch rules as opposed to the tests one above which
+    # may change regularly.
+    validate-tests:
+        name: Tests status
+        runs-on: ubuntu-latest
+        needs:
+            - coding-standards
+            - auto-review
+            - tests
+            - legacy-tests
+            - infection
+            - e2e-ubuntu
+            - e2e-osx
+            - e2e-windows
+            - e2e-ubuntu-restricted
+        if: always()
+        steps:
+            - name: Successful run
+              if: ${{ !(contains(needs.*.result, 'failure')) }}
+              run: exit 0
+
+            - name: Failing run
+              if: ${{ contains(needs.*.result, 'failure') }}
+              run: exit 1
