--- a/.github/workflows/inspection.yaml
+++ b/.github/workflows/inspection.yaml
@@ -89,3 +89,23 @@ jobs:
 
             -   name: "Run diagnosis"
                 run: "php bin/diagnose.php"
+
+    # This is a "trick", a meta task which does not change, and we can use in
+    # the protected branch rules as opposed to the tests one above which
+    # may change regularly.
+    validate-tests:
+        name: "Inspection status"
+        runs-on: "ubuntu-latest"
+        needs:
+            - "ubuntu-inspection"
+            - "windows-inspection"
+            - "osx-inspection"
+        if: "always()"
+        steps:
+            - name: "Successful run"
+              if: "${{ !(contains(needs.*.result, 'failure')) }}"
+              run: "exit 0"
+
+            - name: "Failing run"
+              if: "${{ contains(needs.*.result, 'failure') }}"
+              run: "exit 1"
