--- a/.github/workflows/inspection.yaml
+++ b/.github/workflows/inspection.yaml
@@ -90,6 +90,33 @@ jobs:
             -   name: "Run diagnosis"
                 run: "php bin/diagnose.php"
 
+    osx-m1-inspection:
+        name: "OSX M1 Inspection"
+        runs-on: " 	macos-14"
+        strategy:
+            matrix:
+                php-version:
+                    - "8.3"
+        steps:
+            -   name: "Checkout"
+                uses: "actions/checkout@v3.1.0"
+
+            -   name: "Set up PHP"
+                uses: "shivammathur/setup-php@2.22.0"
+                with:
+                    coverage: "xdebug"
+                    php-version: "${{ matrix.php-version }}"
+                    tools: "phive"
+
+            -   name: "Install Composer dependencies"
+                uses: "ramsey/composer-install@v2"
+
+            -   name: "Execute finders"
+                run: "php bin/execute.php"
+
+            -   name: "Run diagnosis"
+                run: "php bin/diagnose.php"
+
     # This is a "trick", a meta task which does not change, and we can use in
     # the protected branch rules as opposed to the tests one above which
     # may change regularly.
@@ -100,6 +127,7 @@ jobs:
             - "ubuntu-inspection"
             - "windows-inspection"
             - "osx-inspection"
+            - "osx-m1-inspection"
         if: "always()"
         steps:
             - name: "Successful run"
