--- a/infection.json5
+++ b/infection.json5
@@ -32,7 +32,7 @@
         "Continue_": false,
         "DecrementInteger": {
             "ignore": [
-                "Fidry\\CpuCoreCounter\\CpuCoreCounter::getAvailableParallelism"
+                "Fidry\\CpuCoreCounter\\CpuCoreCounter::getAvailableForParallelisation"
             ]
         },
         "FunctionCallRemoval": {
@@ -43,7 +43,7 @@
         },
         "IncrementInteger": {
             "ignore": [
-                "Fidry\\CpuCoreCounter\\CpuCoreCounter::getAvailableParallelism"
+                "Fidry\\CpuCoreCounter\\CpuCoreCounter::getAvailableForParallelisation"
             ]
         },
         "PublicVisibility": false,
