--- a/phpstan.src.neon
+++ b/phpstan.src.neon
@@ -8,3 +8,9 @@ parameters:
 		- src
 
 	tmpDir: .build/phpstan/src/
+
+	ignoreErrors:
+
+		# This is a sanity check
+		- path: src/Finder/EnvVariableFinder.php
+		  message: '#find\(\) should return int\<1\, max\>\|null but returns int\|null\.#'
