--- a/infection.json5
+++ b/infection.json5
@@ -26,14 +26,20 @@
         "CastInt": {
             "ignore": [
                 // This is a bug or case handled by strict types. Not sure why
-                // infection can't detect it.V
+                // infection can't detect it.
                 "Fidry\\CpuCoreCounter\\Finder\\EnvVariableFinder::isPositiveInteger"
             ]
         },
         "CastString": {
             "ignore": [
-                // I can't find a case in practice where this would happen
+                // I can't find a case in practice where this would happen.
                 "Fidry\\CpuCoreCounter\\Executor\\ProcOpenExecutor::execute"
+            ]
+        },
+        "Coalesce": {
+            "ignore": [
+                // Cannot test this case.
+                "Fidry\\CpuCoreCounter\\CpuCoreCounter::getAvailableForParallelisation"
             ]
         },
         "Continue_": false,
@@ -44,7 +50,7 @@
         },
         "FunctionCallRemoval": {
             "ignore": [
-                // I can't find a case in practice where this would happen
+                // I can't find a case in practice where this would happen.
                 "Fidry\\CpuCoreCounter\\Executor\\ProcOpenExecutor::execute"
             ]
         },
@@ -59,10 +65,16 @@
                 "Fidry\\CpuCoreCounter\\CpuCoreCounter::getAvailableForParallelisation"
             ]
         },
+        "OneZeroFloat": {
+            "ignore": [
+                // Cannot test this case.
+                "Fidry\\CpuCoreCounter\\CpuCoreCounter::getAvailableForParallelisation"
+            ]
+        },
         "PublicVisibility": false,
         "TrueValue": {
             "ignore": [
-                // This is a case where the value does not matter
+                // This is a case where the value does not matter.
                 "Fidry\\CpuCoreCounter\\Finder\\LscpuPhysicalFinder::countCpuCores"
             ]
         }
