--- a/phpstan.src.neon
+++ b/phpstan.src.neon
@@ -11,6 +11,8 @@ parameters:
 
 	ignoreErrors:
 
-		# This is a sanity check
 		- path: src/Finder/EnvVariableFinder.php
 		  message: '#find\(\) should return int\<1\, max\>\|null but returns int\|null\.#'
+
+		- path: src/CpuCoreCounter.php
+		  message: '#CpuCoreCounter::getAvailableForParallelisation\(\) should return int\<1\, max\> but returns int\.#'
