feat: Add an easier way to debug (#131)
I would like to make cases like https://github.com/PHP-CS-Fixer/PHP-CS-Fixer/issues/8129 easier to debug. There is 3 things to check:

- If each respective finder behaves as expected, this is the job of the `diagnose.php`.
- Which finder result got picked: the introduce `CpuCoreFinder::trace()` should answer that.
- A way to debug `CpuCoreFinder::getAvailableForParallelisation()`. Since #127 is not released yet, the signature of `::getAvailableForParallelisation()` to return a result value object which could capture the resolved parameters to be able to figure out with which values the calculation was done.

--- a/phpstan.src.neon
+++ b/phpstan.src.neon
@@ -14,4 +14,7 @@ parameters:
 		  message: '#find\(\) should return int\<1\, max\>\|null but returns int\|null\.#'
 
 		- path: src/CpuCoreCounter.php
-		  message: '#CpuCoreCounter::getAvailableForParallelisation\(\) should return int\<1\, max\> but returns int\.#'
+		  message: '#ParallelisationResult constructor expects int\<1\, max\>, int given\.#'
+
+		- path: src/ParallelisationResult.php
+		  message: '#\$correctedLimit \(int\<1\, max\>\|null\) does not accept int\|null#'
